# prompting

./: .env.example  .gitignore  pyproject.toml
notebooks/: pliny_data.ipynb
