[project]
name = "prompting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.6.0",
    "langchain[google-genai]>=0.3.26",
    "matplotlib>=3.10.3",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "ipython>=9.4.0",
]
